--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- the banner in the center -->
 		<div id="banner">
 			<img src="images/banner2.png" alt="Bun Bun Shop">
-			<p>Here, we love cinnamon rolls <br> as much as you do!</p>
+			<p>Here, we love cinnamon rolls as much as you do!</p>
 		</div>
 
 		
