--- a/menu.html
+++ b/menu.html
@@ -13,9 +13,71 @@
 				<h2 id="home"><a href="index.html">home</a></h2>
 				<h2 id="menu"><a href="menu.html">menu</a></h2>
 				<h2 id="about">about<h2> 
-				<h2 id="sign">sign-up/Log-in</h2>
 			</nav>
+			<h2 id="sign">sign-up/log-in</h2>
 		</header>
+
+		<!--nav bar-->
+		<div id="nav_bar"> 
+			<p></p>
+		</div>
+
+		<img id="cart" src="images/cart.png">
+
+		<div id="swirl">
+			<img src="images/swirl.png" width=800 height=800>
+		</div>
+
+		<!--products-->
+		<main> 
+			<a a href="product_detail.html">
+				<div class="product a"> 
+					<img class="pic" src="images/products/a.png">
+					<h3>Original</h3>
+					<p class="price">$3.28</p>
+					<img class="cart_plus" src="images/cart_plus.png">
+				</div>
+			</a>
+
+			<div class="product b"> 
+				<img class="pic" src="images/products/b.png">
+				<h3>Blackberry</h3>
+				<p class="price">$3.5</p>
+				<img class="cart_plus" src="images/cart_plus.png">
+			</div>
+
+			<div class="product c"> 
+				<img class="pic" src="images/products/c.png">
+				<h3>Walnut</h3>
+				<p class="price">$3.75</p>
+				<img class="cart_plus" src="images/cart_plus.png">
+			</div>
+
+			<div class="product d"> 
+				<img class="pic" src="images/products/d.png">
+				<h3>Original (Gluten-free)</h3>
+				<p class="price">$3.28</p>
+				<img class="cart_plus" src="images/cart_plus.png">
+			</div>
+
+			<div class="product e"> 
+				<img class="pic" src="images/products/e.png">
+				<h3>Pumpkin Spice</h3>
+				<p class="price">$3.5</p>
+				<img class="cart_plus" src="images/cart_plus.png">
+			</div>
+
+			<div class="product f"> 
+				<img class="pic" src="images/products/f.png">
+				<h3>Caramel Pecan</h3>
+				<p class="price">$3.75</p>
+				<img class="cart_plus" src="images/cart_plus.png">
+			</div>
+		</main>
+
+		<div id="rank">
+			<img src="images/rank.png" width=50px>
+		</div>
 
 	</body>
 		<h1>
