--- a/product_detail.html
+++ b/product_detail.html
@@ -85,7 +85,7 @@
 		<!--product detail floating window-->
 		<div id="original">
 			<!--close button-->
-			<img id="close" src="images/close.png" >
+			<a href="menu.html"><img id="close" src="images/close.png"></a>
 
 			<!--description-->
 			<img id="detail_a" src="images/products/a.png" width=120px height=80px> 
@@ -141,7 +141,7 @@
 
 			<!--total price-->
 			<div id="total_price">
-				<h3>Total:</h3>
+				<h3>Subtotal:</h3>
 			</div>
 
 			<!--customer reviews-->
